# RangeNetTrt8

./: .gitignore  CMakeLists.txt  CMakeLists_v2.txt  README.md  README_cn.md  package.xml
.github/workflows/: build_image.yml  build_image_ubuntu20.04_cuda11.1.1_tensorrt10.6_noetic.yml  build_image_ubuntu20.04_cuda12.4.1_tensorrt10.6_noetic.yml  build_image_ubuntu22.04_cuda12.4.1_tensorrt10.6_humble.yml  close_issue.yml  delete_failure_workflow.yml
cmake/: Color.cmake  Compiler.cmake  ROS.cmake  ROS1.cmake  ROS2.cmake  TensorRT.cmake  ThirdParty.cmake
config/: infer.yaml
data/: 000000.pcd
docker/: Dockerfile-tensorrt8.2.2  READMD.md  README.md  build_image.sh  build_image_template.yml  generate_dockerfile.py
docker/ubuntu20.04_cuda11.1.1_tensorrt10.6_noetic/: Dockerfile  build_image.sh  docker-compose.yml
docker/ubuntu20.04_cuda12.4.1_tensorrt10.6_noetic/: Dockerfile  build_image.sh  docker-compose.yml
docker/ubuntu22.04_cuda12.4.1_tensorrt10.6_humble/: Dockerfile  build_image.sh  docker-compose.yml
docs/: the_reason_for_why_using__FP16_can_cause_accuracy_degradation.md
example/: 000000.pcd  002979.pcd  infer.cpp  infer.yaml  infer_api.cpp  ros_example.cpp
include/: net.hpp  netTensorRT.hpp  selector.hpp
launch/: rangenet.launch  ros1.rviz  ros1_bag.launch  ros1_rangenet.launch  ros2_bag.launch  ros2_rangenet.launch  rosbag.launch  rviz2.rviz
ops/: cuda_utils.hpp  project.cpp  project.hpp  project_kernel.cu  project_kernel.hpp
script/: build_container_rangenet.sh  fold_operator.py
src/: demo.cpp  netTensorRT.cpp  pointcloud_semantic_segmentation.cpp  ros1_demo.cpp  ros2_demo.cpp  selector.cpp
src/network/: net.cpp  netTensorRT.cpp
src/ops/: cuda_utils.hpp  project.cpp  project.hpp  project_kernel.cu  project_kernel.hpp
src/utils/: pointcloud_io.cpp  pointcloud_io.h  postprocess.cpp  postprocess.hpp
utils/: pointcloud_io.cpp  postprocess.cpp  vector_io.cpp  vector_io.hpp
