<package format="3">
  <name>rangenet_pp</name>
  <version>0.1.0</version>
  <description>The rangenet_pp package</description>
  <maintainer email="hong877381@gmail.com">helios</maintainer>
  <license>Apache 2</license>

  <!-- for ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <!-- for ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- 共性部分 -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
